"""
Render Output Action

Handles render_output action including:
- Rendering output
- Activity tracking
"""
from pathlib import Path
import json
from typing import Dict, Any
from agile_bot.bots.base_bot.src.actions.activity_tracker import ActivityTracker


class RenderOutputAction:
    """Render Output action implementation."""
    
    def __init__(self, bot_name: str, behavior: str, workspace_root: Path):
        self.bot_name = bot_name
        self.behavior = behavior
        self.workspace_root = Path(workspace_root)
        self.tracker = ActivityTracker(workspace_root)
    
    def render(self) -> Dict[str, Any]:
        """Render output."""
        return {'status': 'rendered'}
    
    def track_activity_on_start(self):
        """Track activity when action starts."""
        self.tracker.track_start(self.bot_name, self.behavior, 'render_output')
    
    def track_activity_on_completion(self, outputs: dict = None, duration: int = None):
        """Track activity when action completes."""
        self.tracker.track_completion(self.bot_name, self.behavior, 'render_output', outputs, duration)
    
    def finalize_and_transition(self):
        """Finalize action and return next action."""
        class TransitionResult:
            next_action = 'validate_rules'
        return TransitionResult()
    
    def save_state_on_completion(self):
        """Save workflow state on completion."""
        state_file = self.workspace_root / 'project_area' / 'workflow_state.json'
        state_file.parent.mkdir(parents=True, exist_ok=True)
        state = json.loads(state_file.read_text(encoding='utf-8')) if state_file.exists() else {}
        
        if 'completed_actions' not in state:
            state['completed_actions'] = []
        
        state['completed_actions'].append({
            'action_state': f'{self.bot_name}.{self.behavior}.render_output',
            'timestamp': '2025-12-04T10:00:00Z'
        })
        
        state_file.write_text(json.dumps(state), encoding='utf-8')
    
    def inject_next_action_instructions(self):
        """Inject next action instructions."""
        return "Proceed to validate_rules action"  # Return string instructions

