
classDiagram
    class Base Bot {
        +Executes_Actions()
        +Track_activity()
        +Route_to_behaviors_and_actions()
        +Persist_content()
        +Manage_Project_State()
    }

    Base Bot --> Behavior : uses
    Base Bot --> Behavior : uses
    Base Bot --> Router : uses
    Base Bot --> Content : uses
    Base Bot --> Project : uses
    class Specific Bot {
        +Provide_Behavior_config()
        +Provide_MCP_config()
        +Provide_Renderers()
        +Provide_Extractors()
        +Provide_Synchronizer()
    }

    Specific Bot --> Behavior : uses
    class Router {
        +Match_trigger_patterns()
        +Route_to_MCP_bot_tool()
        +Route_to_behavior_tool()
        +Route_to_action_tool()
        +Forward_to_behavior()
    }

    Router --> Base Bot : uses
    Router --> Behavior : uses
    Router --> Behavior : uses
    Router --> Base Bot : uses
    Router --> Behavior : uses
    Router --> Behavior : uses
    Router --> Base Bot : uses
    class Workflow State {
        +Track_current_action()
        +Track_completed_actions()
        +Determine_next_action()
        +Pause_workflow()
        +Resume_workflow()
    }

    Workflow State --> Behavior : uses
    class Project {
        +Move_project_to_working_area()
        +Save_project_in_context()
        +Update_project_area()
    }

    Project --> Workflow State : uses
    Project --> Content : uses
    class Behavior {
        +Perform_Configured_Actions()
        +Invoke_On_Trigger_Words()
        +Inject_Instructions()
        +Provide_Guardrails()
        +Provide_Rules()
    }

    Behavior --> Rule : uses
    Behavior --> Content : uses
    class Base Action {
        +Inject_Instructions()
        +Load_Relevant_Content_+_Inject_Into_Instructions()
        +Save_content_changes()
    }

    Base Action --> Behavior : uses
    Base Action --> Content : uses
    Base Action --> Content : uses
    class Behavior Workflow {
        +Determine_next_Action()
        +Track_state()
    }

    Behavior Workflow --> Behavior : uses
    Behavior Workflow --> Behavior : uses
    class GatherContextAction {
        +Inject_gather_context_instructions()
        +Inject_questions_and_evidence()
    }

    GatherContextAction --> Behavior : uses
    GatherContextAction --> Guardrails : uses
    GatherContextAction --> Behavior : uses
    GatherContextAction --> Guardrails : uses
    class Guardrails {
        +Provide_required_context()
        +Guide_planning_decisions()
        +Define_recommended_human_activity()
    }

    class PlanningAction {
        +Inject_planning_instructions()
        +Inject_decision_criteria_and_assumptions()
    }

    PlanningAction --> Behavior : uses
    PlanningAction --> Guardrails : uses
    PlanningAction --> Behavior : uses
    PlanningAction --> Guardrails : uses
    class BuildKnowledgeAction {
        +Inject_knowledge_graph_template()
        +Inject_builder_instructions()
        +Save_Knowledge_graph()
    }

    BuildKnowledgeAction --> Behavior : uses
    BuildKnowledgeAction --> Content : uses
    BuildKnowledgeAction --> Behavior : uses
    BuildKnowledgeAction --> Content : uses
    BuildKnowledgeAction --> Behavior : uses
    BuildKnowledgeAction --> Content : uses
    class Content {
        +Render_outputs()
        +Synchronize_formats()
        +Save_knowledge_graph()
        +Load_rendered_content()
        +Present_rendered_content()
    }

    Content --> Template : uses
    Content --> Renderer : uses
    class RenderOutputAction {
        +Inject_render_output_instructions()
        +Inject_templates()
        +Inject_transformers()
        +Load_+_inject_structured_content()
    }

    RenderOutputAction --> Behavior : uses
    RenderOutputAction --> Content : uses
    RenderOutputAction --> Renderer : uses
    RenderOutputAction --> Behavior : uses
    RenderOutputAction --> Content : uses
    RenderOutputAction --> Template : uses
    RenderOutputAction --> Behavior : uses
    RenderOutputAction --> Content : uses
    RenderOutputAction --> Behavior : uses
    RenderOutputAction --> Content : uses
    class Renderer {
        +Render_complex_output()
        +Render_outputs_using_components_in_context()
    }

    Renderer --> Template : uses
    Renderer --> Template : uses
    Renderer --> Content : uses
    class Template {
        +Define_output_structure()
        +Transform_content()
        +Load_template()
    }

    Template --> Content : uses
    Template --> Behavior : uses
    Template --> Content : uses
    class ValidateRulesAction {
        +Inject_common_bot_rules()
        +Inject_behavior_specific_rules()
        +Load_+_inject_content_for_validation()
    }

    ValidateRulesAction --> Base Bot : uses
    ValidateRulesAction --> Behavior : uses
    ValidateRulesAction --> Behavior : uses
    ValidateRulesAction --> Content : uses
    class Rule {
        +Validate_content()
        +Find_behavior_specific_rules_from_context()
        +Find_common_bot_rules_from_context()
        +Load_+_inject_diagnostics_results()
        +Suggest_corrections()
    }

    Rule --> Behavior : uses
    Rule --> Base Bot : uses
    class CorrectBotAction {
        +Inject_correct_bot_instructions()
        +Load_+_inject_diagnostics_results()
    }

    CorrectBotAction --> Behavior : uses
    CorrectBotAction --> Content : uses
S